--- a/src/main/resources/dashboard.fxml
+++ b/src/main/resources/dashboard.fxml
@@ -1,14 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.ScatterChart?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="568.0" prefWidth="828.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="">
+   <children>
+      <ScatterChart id="XYchart" layoutX="355.0" layoutY="36.0" prefHeight="286.0" prefWidth="383.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </ScatterChart>
+      <AnchorPane layoutX="31.0" layoutY="302.0" prefHeight="234.0" prefWidth="243.0" style="-fx-border-color:black;">
+         <children>
+            <MenuButton id="menuTest" layoutX="72.0" layoutY="83.0" mnemonicParsing="false" text="MenuButton">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+              </items>
+            </MenuButton>
+            <Text layoutX="53.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Person og test info" wrappingWidth="127.09716796875" />
+            <TextField id="personText" editable="false" layoutX="72.0" layoutY="49.0" />
+            <TextField id="durationInput" layoutX="73.0" layoutY="120.0" prefHeight="26.0" prefWidth="75.0" />
+            <Button id="exportButton" layoutX="14.0" layoutY="178.0" mnemonicParsing="false" text="Export Data" />
+            <Button id="startButton" layoutX="123.0" layoutY="178.0" mnemonicParsing="false" text="Start Test" />
+            <Label layoutX="14.0" layoutY="54.0" text="Person" />
+            <Label layoutX="19.0" layoutY="88.0" text="Test" />
+            <Label layoutX="8.0" layoutY="125.0" text="Duration" />
+         </children>
+         <effect>
+            <Blend />
+         </effect>
+      </AnchorPane>
+      <MenuBar id="menuBar" layoutX="71.0" layoutY="22.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <AnchorPane layoutX="289.0" layoutY="336.0" prefHeight="200.0" prefWidth="492.0" style="-fx-border-color: black;">
+         <children>
+            <Label style="-fx-border-color: black;" text="Resultat">
+               <font>
+                  <Font size="28.0" />
+               </font>
+            </Label>
+            <Label layoutX="33.0" layoutY="59.0" text="Kurvelengde" />
+            <Label layoutX="212.0" layoutY="59.0" text="Areal" />
+            <Label layoutX="343.0" layoutY="59.0" text="Turning-point" />
+            <TextArea id="kurvelengdeId" editable="false" layoutX="26.0" layoutY="100.0" prefHeight="76.0" prefWidth="109.0" />
+            <TextArea id="arealId" editable="false" layoutX="192.0" layoutY="100.0" prefHeight="76.0" prefWidth="109.0" />
+            <TextArea id="turningpointId" editable="false" layoutX="333.0" layoutY="100.0" prefHeight="76.0" prefWidth="109.0" />
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
