--- a/src/main/resources/dashboard.fxml
+++ b/src/main/resources/dashboard.fxml
@@ -26,7 +26,7 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </ScatterChart>
-      <AnchorPane layoutX="31.0" layoutY="302.0" prefHeight="234.0" prefWidth="243.0" style="-fx-border-color:black;">
+      <AnchorPane layoutX="20.0" layoutY="302.0" prefHeight="251.0" prefWidth="250.0" style="-fx-border-color:black;">
          <children>
             <MenuButton id="menuTest" layoutX="72.0" layoutY="83.0" mnemonicParsing="false" text="MenuButton">
               <items>
@@ -37,8 +37,8 @@
             <Text layoutX="53.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Person og test info" wrappingWidth="127.09716796875" />
             <TextField id="personText" editable="false" layoutX="72.0" layoutY="49.0" />
             <TextField id="durationInput" layoutX="73.0" layoutY="120.0" prefHeight="26.0" prefWidth="75.0" />
-            <Button id="exportButton" layoutX="14.0" layoutY="178.0" mnemonicParsing="false" text="Export Data" />
-            <Button id="startButton" layoutX="123.0" layoutY="178.0" mnemonicParsing="false" text="Start Test" />
+            <Button id="exportButton" layoutX="33.0" layoutY="178.0" mnemonicParsing="false" text="Export Data" />
+            <Button id="startButton" layoutX="139.0" layoutY="178.0" mnemonicParsing="false" text="Start Test" />
             <Label layoutX="14.0" layoutY="54.0" text="Person" />
             <Label layoutX="19.0" layoutY="88.0" text="Test" />
             <Label layoutX="8.0" layoutY="125.0" text="Duration" />
@@ -47,21 +47,23 @@
             <Blend />
          </effect>
       </AnchorPane>
-      <MenuBar id="menuBar" layoutX="71.0" layoutY="22.0">
+      <MenuBar id="menuBar" prefWidth="118.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
               <MenuItem mnemonicParsing="false" text="Close" />
+                  <MenuItem mnemonicParsing="false" text="Menu1" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
               <MenuItem mnemonicParsing="false" text="About" />
+                  <MenuItem mnemonicParsing="false" text="sampleMenu" />
             </items>
           </Menu>
         </menus>
       </MenuBar>
-      <AnchorPane layoutX="289.0" layoutY="336.0" prefHeight="200.0" prefWidth="492.0" style="-fx-border-color: black;">
+      <AnchorPane layoutX="283.0" layoutY="353.0" prefHeight="200.0" prefWidth="531.0" style="-fx-border-color: black;">
          <children>
             <Label style="-fx-border-color: black;" text="Resultat">
                <font>
