--- a/src/main/resources/dashboard.fxml
+++ b/src/main/resources/dashboard.fxml
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
 <AnchorPane id="dashboardPane" prefHeight="636.0" prefWidth="828.0" stylesheets="@dashboard.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
        <AnchorPane id="infoPane" layoutX="20.0" layoutY="293.0" prefHeight="329.0" prefWidth="250.0">
           <children>
-              <MenuButton id="menuTest" layoutX="72.0" layoutY="83.0" mnemonicParsing="false" text="TESTS">
-                  <items>
-                      <MenuItem mnemonicParsing="false" text="EYES OPEN" />
-                      <MenuItem mnemonicParsing="false" text="EYES CLOSED" />
-                  <MenuItem mnemonicParsing="false" text="EYES OPEN - FOAM" />
-                  <MenuItem mnemonicParsing="false" text="EYES CLOSED - FOAM" />
-                  <MenuItem mnemonicParsing="false" text="ADD NEW" />
-                  </items>
-              </MenuButton>
-              <Text id="misc-text" layoutX="54.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Person og test info" wrappingWidth="171.0">
+              <Text id="misc-text" layoutX="40.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Person og test info" wrappingWidth="171.0">
                <font>
                   <Font size="18.0" />
                </font></Text>
@@ -37,6 +28,16 @@
               <Label layoutX="14.0" layoutY="54.0" text="Person" />
               <Label layoutX="19.0" layoutY="88.0" text="Test" />
               <Label layoutX="8.0" layoutY="125.0" text="Duration" />
+              <ComboBox id="selectTest" editable="true" layoutX="73.0" layoutY="83.0" prefWidth="150.0" promptText="Select Test" >
+                  <items>
+                      <FXCollections fx:factory="observableArrayList">
+                          <String fx:value="Eyes Open" />
+                          <String fx:value="Eyes closed" />
+                          <String fx:value="Eyes Open - Foam" />
+                          <String fx:value="Eyes Closed - Foam" />
+                      </FXCollections>
+                  </items>
+              </ComboBox>
           </children>
        </AnchorPane>
        <AnchorPane id="resultPane" layoutX="283.0" layoutY="441.0" prefHeight="181.0" prefWidth="531.0">
@@ -48,7 +49,7 @@
              </Label>
              <Label layoutX="33.0" layoutY="59.0" text="Kurvelengde" />
              <Label layoutX="212.0" layoutY="59.0" text="Areal" />
-             <Label layoutX="343.0" layoutY="59.0" text="Turning-point" />
+             <Label layoutX="398.0" layoutY="59.0" text="Turning-point" />
              <TextArea fx:id="curve" editable="false" layoutX="12.0" layoutY="89.0" prefHeight="76.0" prefWidth="135.0">
                <font>
                   <Font size="20.0" />
@@ -57,7 +58,7 @@
                <font>
                   <Font size="20.0" />
                </font></TextArea>
-             <TextArea fx:id="turning" editable="false" layoutX="339.0" layoutY="89.0" prefHeight="76.0" prefWidth="109.0">
+             <TextArea fx:id="turning" editable="false" layoutX="394.0" layoutY="89.0" prefHeight="76.0" prefWidth="109.0">
                <font>
                   <Font size="20.0" />
                </font></TextArea>
@@ -71,7 +72,7 @@
        </AnchorPane>
       <AnchorPane fx:id="COP" layoutX="276.0" layoutY="58.0" prefHeight="374.0" prefWidth="540.0">
          <children>
-            <LineChart fx:id="copChart" axisSortingPolicy="NONE" createSymbols="false" horizontalGridLinesVisible="false" legendVisible="false" prefHeight="374.0" prefWidth="531.0" title="COP" verticalGridLinesVisible="false">
+            <LineChart fx:id="copChart" animated="true" axisSortingPolicy="NONE" createSymbols="false" horizontalGridLinesVisible="false" legendVisible="false" prefHeight="374.0" prefWidth="531.0" title="COP" verticalGridLinesVisible="false" visible="false">
                <xAxis>
                   <NumberAxis autoRanging="false" lowerBound="-100" side="BOTTOM" tickUnit="1" upperBound="100" />
                </xAxis>
@@ -81,9 +82,10 @@
             </LineChart>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="recordingPane" layoutX="286.0" layoutY="16.0" prefHeight="426.0" prefWidth="540.0" visible="false">
+      <AnchorPane fx:id="recordingPane" layoutX="286.0" layoutY="16.0" prefHeight="426.0" prefWidth="540.0">
          <children>
-            <LineChart fx:id="recordingYChart" horizontalGridLinesVisible="false" layoutX="-4.0" layoutY="187.0" prefHeight="164.0" prefWidth="531.0" title="Y Axis">
+            <Label layoutX="311.0" layoutY="186.0" text="X Curvelength:" />
+            <LineChart fx:id="recordingYChart" animated="true" horizontalGridLinesVisible="false" layoutY="213.0" prefHeight="164.0" prefWidth="531.0" title="Y Axis">
                <xAxis>
                   <NumberAxis fx:id="recYXAxis" side="BOTTOM" />
                </xAxis>
@@ -91,7 +93,7 @@
                   <NumberAxis lowerBound="-150.0" side="LEFT" upperBound="150.0" />
                </yAxis>
             </LineChart>
-            <LineChart fx:id="recordingXChart" horizontalGridLinesVisible="false" layoutX="-9.0" layoutY="14.0" prefHeight="164.0" prefWidth="531.0" title="X Axis">
+            <LineChart fx:id="recordingXChart" animated="true" horizontalGridLinesVisible="false" layoutY="30.0" prefHeight="164.0" prefWidth="531.0" title="X Axis">
                <xAxis>
                   <NumberAxis fx:id="recXXAxis" side="BOTTOM" />
                </xAxis>
@@ -101,6 +103,9 @@
             </LineChart>
             <Label layoutX="387.0" layoutY="22.0" text="Time:" />
             <TextField fx:id="remainingTime" layoutX="435.0" layoutY="11.0" prefHeight="37.0" prefWidth="65.0" />
+            <TextField fx:id="xCurvelength" layoutX="422.0" layoutY="181.0" prefHeight="26.0" prefWidth="93.0" />
+            <Label layoutX="311.0" layoutY="369.0" text="Y Curvelength:" />
+            <TextField fx:id="yCurvelength" layoutX="422.0" layoutY="364.0" prefHeight="26.0" prefWidth="93.0" />
          </children>
       </AnchorPane>
    </children>
