--- a/src/main/resources/dashboard.fxml
+++ b/src/main/resources/dashboard.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
@@ -11,8 +13,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import javafx.collections.FXCollections?>
-<?import java.lang.String?>
 <AnchorPane id="dashboardPane" prefHeight="636.0" prefWidth="828.0" stylesheets="@dashboard.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
        <AnchorPane id="infoPane" layoutX="20.0" layoutY="293.0" prefHeight="329.0" prefWidth="250.0">
@@ -28,7 +28,7 @@
               <Label layoutX="14.0" layoutY="54.0" text="Person" />
               <Label layoutX="19.0" layoutY="88.0" text="Test" />
               <Label layoutX="8.0" layoutY="125.0" text="Duration" />
-              <ComboBox id="selectTest" editable="true" layoutX="73.0" layoutY="83.0" prefWidth="150.0" promptText="Select Test" >
+              <ComboBox id="selectTest" editable="true" layoutX="73.0" layoutY="83.0" prefWidth="150.0" promptText="Select Test">
                   <items>
                       <FXCollections fx:factory="observableArrayList">
                           <String fx:value="Eyes Open" />
@@ -72,33 +72,33 @@
        </AnchorPane>
       <AnchorPane fx:id="COP" layoutX="276.0" layoutY="58.0" prefHeight="374.0" prefWidth="540.0">
          <children>
-            <LineChart fx:id="copChart" animated="true" axisSortingPolicy="NONE" createSymbols="false" horizontalGridLinesVisible="false" legendVisible="false" prefHeight="374.0" prefWidth="531.0" title="COP" verticalGridLinesVisible="false" visible="false">
+            <LineChart fx:id="copChart" animated="true" axisSortingPolicy="NONE" horizontalGridLinesVisible="false" legendVisible="false" prefHeight="374.0" prefWidth="531.0" title="COP" verticalGridLinesVisible="false">
                <xAxis>
-                  <NumberAxis autoRanging="false" lowerBound="-100" side="BOTTOM" tickUnit="1" upperBound="100" />
+                  <NumberAxis autoRanging="false" lowerBound="-150" side="BOTTOM" tickUnit="1" upperBound="150" />
                </xAxis>
                <yAxis>
-                  <NumberAxis autoRanging="false" lowerBound="-100" side="LEFT" tickUnit="1" upperBound="100" />
+                  <NumberAxis autoRanging="false" lowerBound="-150" side="LEFT" tickUnit="1" upperBound="150" />
                </yAxis>
             </LineChart>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="recordingPane" layoutX="286.0" layoutY="16.0" prefHeight="426.0" prefWidth="540.0">
+      <AnchorPane fx:id="recordingPane" layoutX="286.0" layoutY="16.0" prefHeight="426.0" prefWidth="540.0" visible="false">
          <children>
             <Label layoutX="311.0" layoutY="186.0" text="X Curvelength:" />
-            <LineChart fx:id="recordingYChart" animated="true" horizontalGridLinesVisible="false" layoutY="213.0" prefHeight="164.0" prefWidth="531.0" title="Y Axis">
+            <LineChart fx:id="recordingYChart" animated="true" createSymbols="false" horizontalGridLinesVisible="false" layoutY="213.0" prefHeight="164.0" prefWidth="531.0" title="Y Axis">
                <xAxis>
                   <NumberAxis fx:id="recYXAxis" side="BOTTOM" />
                </xAxis>
                <yAxis>
-                  <NumberAxis lowerBound="-150.0" side="LEFT" upperBound="150.0" />
+                  <NumberAxis autoRanging="false" lowerBound="-125.0" side="LEFT" upperBound="125.0" />
                </yAxis>
             </LineChart>
-            <LineChart fx:id="recordingXChart" animated="true" horizontalGridLinesVisible="false" layoutY="30.0" prefHeight="164.0" prefWidth="531.0" title="X Axis">
+            <LineChart fx:id="recordingXChart" animated="true" createSymbols="false" horizontalGridLinesVisible="false" layoutY="30.0" prefHeight="164.0" prefWidth="531.0" title="X Axis">
                <xAxis>
                   <NumberAxis fx:id="recXXAxis" side="BOTTOM" />
                </xAxis>
                <yAxis>
-                  <NumberAxis lowerBound="-150.0" side="LEFT" upperBound="150.0" />
+                  <NumberAxis autoRanging="false" lowerBound="-125.0" side="LEFT" upperBound="125.0" />
                </yAxis>
             </LineChart>
             <Label layoutX="387.0" layoutY="22.0" text="Time:" />
