--- a/src/main/resources/dashboard.fxml
+++ b/src/main/resources/dashboard.fxml
@@ -102,8 +102,8 @@
                </yAxis>
             </LineChart>
             <Label layoutX="387.0" layoutY="22.0" text="Time:" />
-            <TextField fx:id="remainingTime" layoutX="435.0" layoutY="11.0" prefHeight="37.0" prefWidth="65.0" />
-            <TextField layoutX="422.0" layoutY="181.0" prefHeight="26.0" prefWidth="93.0" fx:id="xCurvelength" />
+            <TextField editable="false" fx:id="remainingTime" layoutX="435.0" layoutY="11.0" prefHeight="37.0" prefWidth="65.0" />
+            <TextField editable="false" layoutX="422.0" layoutY="181.0" prefHeight="26.0" prefWidth="93.0" fx:id="xCurvelength" />
             <Label layoutX="311.0" layoutY="369.0" text="Y Curvelength:" />
             <TextField fx:id="yCurvelength" layoutX="422.0" layoutY="364.0" prefHeight="26.0" prefWidth="93.0" />
          </children>
