--- a/src/main/resources/dashboard.fxml
+++ b/src/main/resources/dashboard.fxml
@@ -9,6 +9,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -81,7 +85,7 @@
                                 <Font name="Monospaced Bold" size="22.0" />
                             </font>
                         </Text>
-                        <TextField fx:id="personText" layoutX="80.0" layoutY="49.0" style="-fx-background-color: #F3F7F0;-fx-text-fill: #273043;" AnchorPane.rightAnchor="15.0" />
+                        <TextField fx:id="personText" layoutX="81.0" layoutY="49.0" prefHeight="26.0" prefWidth="168.0" style="-fx-background-color: #F3F7F0;-fx-text-fill: #273043;" AnchorPane.rightAnchor="17.0" />
                         <TextField fx:id="durationInput" layoutX="174.0" layoutY="161.0" prefHeight="26.0" prefWidth="75.0" style="-fx-background-color: #F3F7F0;-fx-text-fill: #273043" AnchorPane.rightAnchor="17.0" />
                         <Button fx:id="startButton" layoutX="7.0" layoutY="250.0" maxHeight="50.0" maxWidth="242.0" minHeight="50.0" minWidth="242.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="242.0" style="-fx-background-color: #11CBD7;" text="Start Test" textFill="#273043" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="17.0">
                             <font>
@@ -106,6 +110,7 @@
                         <ComboBox fx:id="selectTest" editable="true" layoutX="99.0" layoutY="104.0" prefWidth="150.0" promptText="Select Test" style="-fx-background-color: #F3F7F0;" AnchorPane.rightAnchor="17.0">
                             <items>
                                 <FXCollections fx:factory="observableArrayList">
+                                    <String fx:value="Romberg" />
                                     <String fx:value="Eyes Open" />
                                     <String fx:value="Eyes closed" />
                                     <String fx:value="Eyes Open - Foam" />
@@ -119,14 +124,14 @@
                         <Font name="Monospaced Regular" size="13.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="repeatTestInput" layoutX="162.0" layoutY="204.0" prefHeight="26.0" prefWidth="75.0" style="-fx-background-color: #F3F7F0;-fx-text-fill: #273043" text="1" />
+                  <TextField fx:id="repeatTestInput" layoutX="174.0" layoutY="204.0" prefHeight="26.0" prefWidth="75.0" style="-fx-background-color: #F3F7F0;-fx-text-fill: #273043" text="1" />
                   <Label layoutX="117.0" layoutY="307.0" prefHeight="29.0" prefWidth="120.0" text="Tests remaining" textFill="#273043" />
                   <TextField fx:id="remainingTime" editable="false" layoutX="14.0" layoutY="330.0" prefHeight="40.0" prefWidth="55.0" style="-fx-background-color: C6F1E7;">
                      <font>
                         <Font name="Monospaced Regular" size="20.0" />
                      </font>
                   </TextField>
-                  <TextField fx:id="remainingTests" editable="false" layoutX="140.0" layoutY="330.0" prefHeight="40.0" prefWidth="55.0" style="-fx-background-color: C6F1E7;">
+                  <TextField fx:id="remainingTest" editable="false" layoutX="140.0" layoutY="330.0" prefHeight="40.0" prefWidth="55.0" style="-fx-background-color: C6F1E7;">
                      <font>
                         <Font name="Monospaced Regular" size="20.0" />
                      </font>
@@ -152,6 +157,7 @@
                                 <NumberAxis autoRanging="false" lowerBound="-150" side="LEFT" tickUnit="1" upperBound="150" />
                             </yAxis>
                         </LineChart>
+                  <Button fx:id="resetCop" layoutX="708.0" layoutY="8.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="12.0" style="-fx-background-color: FF737A;" text="-" textAlignment="CENTER" textFill="#273043" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
                     </children>
                 </AnchorPane>
                 <GridPane fx:id="XYSplitPane" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -180,6 +186,14 @@
                                 <NumberAxis autoRanging="false" lowerBound="-125.0" side="LEFT" upperBound="125.0" />
                             </yAxis>
                         </LineChart>
+                  <Button fx:id="resetXSplit" mnemonicParsing="false" prefHeight="26.0" prefWidth="12.0" style="-fx-background-color: FF737A;" text="-" textAlignment="CENTER" textFill="#273043" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+                     <GridPane.margin>
+                        <Insets right="5.0" top="5.0" />
+                     </GridPane.margin></Button>
+                  <Button fx:id="resetYSplit" mnemonicParsing="false" prefHeight="26.0" prefWidth="12.0" style="-fx-background-color: FF737A;" text="-" textAlignment="CENTER" textFill="#273043" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                     <GridPane.margin>
+                        <Insets right="5.0" top="5.0" />
+                     </GridPane.margin></Button>
                     </children>
                 </GridPane>
                 <GridPane fx:id="TPPane" layoutX="10.0" layoutY="10.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -202,10 +216,10 @@
                         </LineChart>
                         <LineChart fx:id="msdPlot" animated="true" createSymbols="false" horizontalGridLinesVisible="true" legendVisible="false" title="MSD" verticalGridLinesVisible="true" GridPane.rowIndex="1">
                             <xAxis>
-                                <NumberAxis autoRanging="true" side="BOTTOM" tickUnit="1" />
+                                <NumberAxis autoRanging="true" side="BOTTOM" tickUnit="0.1" />
                             </xAxis>
                             <yAxis>
-                                <NumberAxis autoRanging="true" side="LEFT" tickUnit="1" />
+                                <NumberAxis autoRanging="true" side="LEFT" tickUnit="0.1" />
                             </yAxis>
                         </LineChart>
                         <LineChart fx:id="slopePlot" createSymbols="false" horizontalGridLinesVisible="true" horizontalZeroLineVisible="true" legendVisible="false" prefHeight="300.0" title="SLOPE" verticalGridLinesVisible="true" GridPane.columnIndex="1">
@@ -234,6 +248,8 @@
                         <Insets right="10.0" top="3.0" />
                      </GridPane.margin>
                   </Button>
+                  <Button fx:id="resetXi" mnemonicParsing="false" prefHeight="26.0" prefWidth="0.0" style="-fx-background-color: FF737A;" text="-" textAlignment="CENTER" textFill="#273043" GridPane.halignment="RIGHT" GridPane.valignment="TOP" />
+                  <Button fx:id="resetMsd" mnemonicParsing="false" prefHeight="26.0" prefWidth="12.0" style="-fx-background-color: FF737A;" text="-" textAlignment="CENTER" textFill="#273043" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
                     </children>
                 </GridPane>
             </children>
@@ -242,11 +258,21 @@
     <bottom>
         <HBox prefHeight="175.0" prefWidth="1000.0" style="-fx-background-color: C6F1E7;" BorderPane.alignment="CENTER">
             <children>
-            <VBox fx:id="testSwitchBox" prefHeight="200.0" prefWidth="100.0">
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-            </VBox>
+            <BorderPane prefHeight="200.0" prefWidth="200.0">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <top>
+                  <Label text="Select Test" BorderPane.alignment="CENTER" />
+               </top>
+               <right>
+                  <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="139.0" prefWidth="155.0" vbarPolicy="ALWAYS" BorderPane.alignment="CENTER">
+                     <content>
+                        <VBox fx:id="testSwitchBox" prefHeight="136.0" prefWidth="137.0" style="-fx-background-color: #F3F7F0;" />
+                     </content>
+                  </ScrollPane>
+               </right>
+            </BorderPane>
                 <GridPane alignment="CENTER" prefHeight="122.0" prefWidth="120.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -412,12 +438,12 @@
                <children>
                       <Button fx:id="exportButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #11CBD7;" text="Save Current" textFill="#273043">
                      <font>
-                        <Font name="Monospaced Bold" size="15.0" />
+                        <Font name="Monospaced Regular" size="15.0" />
                      </font>
                       </Button>
                   <Button fx:id="exportAllButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" style="-fx-background-color: #11CBD7;" text="Save All" textFill="#273043" GridPane.rowIndex="1">
                      <font>
-                        <Font name="Monospaced Bold" size="15.0" />
+                        <Font name="Monospaced Regular" size="15.0" />
                      </font>
                   </Button>
                </children>
@@ -428,4 +454,23 @@
             </children>
         </HBox>
     </bottom>
+   <top>
+      <MenuBar style="-fx-background-color: #11CBD7;" BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+                  <MenuItem fx:id="menuFileExport" mnemonicParsing="false" text="Export Current" />
+                  <MenuItem fx:id="menuFileExportAll" mnemonicParsing="false" text="Export All" />
+              <MenuItem fx:id="menuFileClose" mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem fx:id="menuHelp" mnemonicParsing="false" text="Help" />
+                  <MenuItem fx:id="menuAbout" mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
 </BorderPane>
